# DUMMIE-Engine

./: .agentignore  .env  .env.example  .gitignore  AGENTS.feature  AGENTS.md  AGENTS.rules.json  AUTOREFACTOR_LEDGER.md  Dockerfile.builder  GEMINI.md  HEARTBEAT.md  IDENTITY.md  INVENTARIO_TOTAL_SKILLS.md  MAD_COORDINATION_PROTOCOL.md  MEMORY.md  Makefile  README.feature  README.md  README.rules.json  RESUMEN_INDUSTRIALIZACION.md  SOUL.md  audit_report.json  autorefactor_state.yaml  debug_causal.txt  dummie_agent_config.json  dummie_gateway_config.json  flake.nix  package-lock.json  package.json  pyrightconfig.json  scratch_test_mcp.py  sss.txt  test_flight.py  test_ipc.py  test_spawn.py  validar-si-deep-research-report-es-verdad.md  verify_spec30_fix.py  walkthrough.md
layers/l2_brain/: .test_chain_259c979d.db  .test_chain_d8e99698.db  .test_decisions_052dd6a8.jsonl  .test_decisions_1bc4aec3.jsonl  .test_decisions_7d73c3d8.jsonl  .test_decisions_b37c4dce.jsonl  .test_decisions_ee177338.jsonl  .test_decisions_fa0651e9.jsonl  .test_loci.db  .test_loci_3f76986ba02044b6ae0237ad13e7fb2f.db  .test_loci_4613d92ffdbf450a85daa26008069c69.db  .test_loci_4690b2f0908942329183e80e82adb924.db  .test_loci_4756b7c766d24c6997f3795c55327eba.db  .test_loci_7a99bde1c8814949be7c424b5f2e0f47.db  .test_loci_98a9e0692d7641eab7a2732ab736b82b.db  .test_loci_afba1f7f09954edf8980ea13529297d0.db  .test_loci_c13adbb3f90046459a55e52e27458db2.db  .test_loci_c24cf194fab54881baf910f37addc4e3.db  .test_loci_c568bf50a1124d9d939b5f8b01af0741.db  .test_loci_ce7c64fb44e443cc8350c4f17b91789e.db  .test_loci_d2de30ab2b6448179189dfdb834a5116.db  .test_loci_ee0c24e8cc7e497c889f8d2d1cc0b221.db  .venv  README.md  __init__.py  adapters.py  ast_indexer.py  auditor_port.py  auto_evolution.py  branch_memory.py  business_orchestrator.py  causal_replay.py  consensus.py  cypher_codec.py  daemon.py  daemon_diagnostic.py  embedding_provider.py  entropy_governor.py  formal_bridge.py  gateway_contract.py  (+27 more)
layers/l2_brain/.aiwg/: identity.json
layers/l2_brain/cognition/: cold_planner.py  epistemic_judge.py  pattern_miner.py  pattern_miner_v2.py  persona_guardian.py
layers/l2_brain/domain/: counterfactual_service.py  dtos.py  hypothesis_service.py  retrieval_service.py
layers/l2_brain/sdk/: __init__.py  client.py  sdk_core_api_pb2.py  sdk_core_api_pb2_grpc.py  (+1 more)
(+1350 files in other folders)
